src/style.scss
@import "../node_modules/bootstrap/scss/functions";
@import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap');

//variable overwrites

$primary: #40739e;
$success: #4cd137;
$warning: #fbc531;
$danger: #e84118;
$font-family-sans-serif: "Roboto", sans-serif !default;
//$headings-font-family: "Bahnschrift", "Heebo", "Arial", sans-serif;
//$input-btn-font-family: "Bahnschrift", "Heebo", "Arial", sans-serif;
$input-font-family: $font-family-sans-serif;

$bgBorderRadius: 20px;
$underScoreBorderWidth: 0.2rem;

$easeOutCirc: cubic-bezier(0, 0.55, 0.45, 1);

$transition-collapse: height 0.4s $easeOutCirc;

@import "../node_modules/bootstrap/scss/variables";
//custom

html, body {
  margin: 0;
  padding: 0;
  background-color: #353b48 !important;
}

div.pageWrap {
  position: relative;
  overflow-x: hidden;
}

div.mainWrap, div.headerBody, div.headerWrap, div.mainWrap {
  max-width: 720px;
}

div.bg {
  position: absolute;
  top: 0;
  left: 0;
  background-color: #f5f6fa;
  border: 1px solid #dcdde1;
  backdrop-filter: blur(16px) saturate(180%);
  -webkit-backdrop-filter: blur(16px) saturate(180%);
  width: 100%;
  height: 100%;
  mix-blend-mode: lighten;
}

div.mainWrapBg.bg {
  border-bottom-right-radius: $bgBorderRadius;
  border-bottom-left-radius: $bgBorderRadius;
  border-top: none;
  opacity: 0.95;
  height: calc(100% - 3rem);
  top: 3rem;
}

div.headerWrapBg.bg {
  border-top-right-radius: $bgBorderRadius;
  border-top-left-radius: $bgBorderRadius;
  border-bottom: none;
  opacity: 0.75;
  height: calc(100% + 3rem)

}

div.mainWrap > * {
  z-index: 0;
}

div.header.bg {
  top: -1.5rem;
  height: calc(100% + 4.5rem);
  width: calc(100vw + 10px);
  background-image: url("img/header_bg.jpg");
  background-size: cover;
  background-position: 50% 15%;
  left: 50%;
  transform: translateX(-50%);
  border: none;
}

div.searchContainer > input {
  height: 4rem;
  font-size: min(8.5vw, 2rem);
  text-align: center;
  text-transform: uppercase;
  font-weight: 500;
  letter-spacing: 0.25rem;
}

div.searchContainer > input::placeholder {
  text-transform: none;
  font-weight: initial;
  letter-spacing: initial;
  color: $gray-500;
}

div.resultString, div.letter {
  font-size: min(7.5vw, 3rem);
}

div.resultString {
  text-transform: uppercase;
  font-weight: 600;
  text-align: center;
}

div.letterWrap {
  display: inline-block;
  position: relative;
  min-width: min(6.5vw, 45px)
}

div.letter {
  padding: 0 clamp(0rem, 1.2vw, 0.5rem);
  margin-top: max(0px, calc(10px - 25%));
}

div.letter.letterMatch {
  position: relative;
}

div.letterCaret {
  content: "";
  display: block;
  position: absolute;
  top: 0;
  left: 50%;
  transform: translateX(-50%);
  border: min(10px, 1.3vh) solid transparent;
  width: 10px;
  height: 10px;
  border-top-color: inherit;
}

div.stringUnderscore {
  height: 1rem;
  border: $underScoreBorderWidth solid;
  border-top: none;
  position: absolute;
  left: 50%;
  transform: translateX(-50%);
  ////move left by one padding + one border width
  ////padding: 0 0.25rem;
  //box-sizing: content-box;
  //transform: translateX(-0.45rem);
  transition: left 400ms $easeOutCirc, width 400ms $easeOutCirc, border-color 400ms $easeOutCirc, transform 400ms $easeOutCirc;
}

div.resultsWrap {
  transition: margin-bottom 400ms $easeOutCirc;
}

.stringUnderscore:after {
  content: "";
  height: 1rem;
  position: absolute;
  border-left: $underScoreBorderWidth solid;
  border-left-color: inherit;
  top: 100%;
  left: calc(50% - (#{$underScoreBorderWidth} / 2));
  transition: border-left-color 400ms $easeOutCirc;
}

.stringUnderscoreText {
  position: relative;
  left: 50%;
  top: 200%;
  transform: translate(-50%);
  color: inherit;
  font-weight: 500;
  text-align: center;
  display: inline-block;
  width: auto;
  padding-top: 0.5rem;
}

div.resultIcon {
  width: 100%;
  height: 5rem;
  display: flex;
  justify-content: center;
  align-items: center;
}

div.resultIcon > svg {
  width: 100%;
  height: 100%;
}

p.iconText {
  font-size: 1.5rem;
}

//import Bootstrap 5 modules
//@import "../node_modules/bootstrap/scss/bootstrap";
@import "../node_modules/bootstrap/scss/mixins";
@import "../node_modules/bootstrap/scss/containers";
@import "../node_modules/bootstrap/scss/grid";
@import "../node_modules/bootstrap/scss/card";
@import "../node_modules/bootstrap/scss/forms";
@import "../node_modules/bootstrap/scss/buttons";
@import "../node_modules/bootstrap/scss/reboot";
@import "../node_modules/bootstrap/scss/utilities";
@import "../node_modules/bootstrap/scss/helpers";
@import "../node_modules/bootstrap/scss/type";
@import "../node_modules/bootstrap/scss/root";

@import "../node_modules/bootstrap/scss/bootstrap-grid";
@import "../node_modules/bootstrap/scss/bootstrap-reboot";
@import "../node_modules/bootstrap/scss/bootstrap-utilities";

